added atari buttons!

--- a/deeplive/atari.html
+++ b/deeplive/atari.html
@@ -93,13 +93,13 @@
 	<div class="wrapper">
 		<section id="placeholder"></section>
 		<section id="neurons">
-			Neurons go here
+			<!-- Neurons go here -->
 		</section>
 		<section id="controller">
 			<div class="controller-wrapper">
-				<button class="btn btn-left"></button>
-				<button class="btn btn-right"></button>
-				<button class="btn btn-shoot"></button>
+				<button id="btn-left"  class="btn btn-left"></button>
+				<button id="btn-right" class="btn btn-right"></button>
+				<button id="btn-shoot" class="btn btn-shoot"></button>
 			</div>
 		</section>
 	</div>
