--- a/lib/app/classify2d.html
+++ b/lib/app/classify2d.html
@@ -50,10 +50,10 @@ input[type="submit"]
 </div>
 </div>
 
-<script src="/lib/convnetjs.release/demo/js/jquery-1.8.3.min.js"></script>
-<script src="/lib/convnetjs.release/demo/js/npgmain.js"></script>
-<script src="/lib/convnetjs.release/build/convnet.js"></script>
-<script src="/lib/convnetjs.release/build/util.js"></script>
+<script src="lib/convnetjs.release/demo/js/jquery-1.8.3.min.js"></script>
+<script src="lib/convnetjs.release/demo/js/npgmain.js"></script>
+<script src="lib/convnetjs.release/build/convnet.js"></script>
+<script src="lib/convnetjs.release/build/util.js"></script>
 <script src="classify2d.js"></script>
 
 </body>
