--- a/lib/app/rldemo.html
+++ b/lib/app/rldemo.html
@@ -8,10 +8,10 @@
   <meta name="author" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <script src="/lib/convnetjs/build/convnet.js"></script>
-  <script src="/lib/convnetjs/build/util.js"></script>
-  <script src="/lib/convnetjs/build/vis.js"></script>
-  <script src="/lib/convnetjs/build/deepqlearn.js"></script>
+  <script src="../convnetjs.release/build/convnet.js"></script>
+  <script src="../convnetjs.release/build/util.js"></script>
+  <script src="../convnetjs.release/build/vis.js"></script>
+  <script src="../convnetjs.release/build/deepqlearn.js"></script>
   <link rel="stylesheet" href="/lib/convnetjs/demo/css/style.css">
   
   <script src="rldemo.js"></script>
