another small fix for rldemo

--- a/lib/app/rldemo.html
+++ b/lib/app/rldemo.html
@@ -12,7 +12,7 @@
   <script src="../convnetjs.release/build/util.js"></script>
   <script src="../convnetjs.release/build/vis.js"></script>
   <script src="../convnetjs.release/build/deepqlearn.js"></script>
-  <link rel="stylesheet" href="/lib/convnetjs/demo/css/style.css">
+  <link rel="stylesheet" href="../convnetjs.release/demo/css/style.css">
   
   <script src="rldemo.js"></script>
   <style type="text/css">
