added simple neural visualisation

--- a/deeplive/atari.html
+++ b/deeplive/atari.html
@@ -93,7 +93,7 @@
 	<div class="wrapper">
 		<section id="placeholder"></section>
 		<section id="neurons">
-			<!-- Neurons go here -->
+			<canvas id="canvas-vis" height="320" width="320"></canvas>
 		</section>
 		<section id="controller">
 			<div class="controller-wrapper">
