--- a/index.html
+++ b/index.html
@@ -240,9 +240,6 @@
           Deep Dream
         </section>
         <section>
-          demo
-        </section>
-        <section>
           <video src="media/journey.mp4" width="1024" height="720" controls="true">
           </video>
         </section>
@@ -252,9 +249,6 @@
         <section>
           Deep Reinforcement Learning
         </section>
-        <section>
-          demo
-        </section> 
         <section data-frame-src='deeplive/atari.html'>
           <iframe src="" width="1024" height="768"></iframe>
         </section>  
@@ -299,8 +293,8 @@
         <section>
           <h3>Andy Kitchen</h3>
           <p>@auastro</p>
-          <a href="http://andy.kitchen/buzz-conf/">
-            <small>andy.kitchen/buzz-conf</small>
+          <a href="http://andy.kitchen/oscon/">
+            <small>andy.kitchen/oscon</small>
           </a>
         </section>
       </section>
