Adding controls, removing thanks to Roger slide

--- a/index.html
+++ b/index.html
@@ -274,12 +274,6 @@
           Thanks!
         </section>
         <section>
-          <h3>Roger Luedecke</h3>
-          <a href="https://www.youtube.com/watch?v=SCE-QeDfXtA">
-            <small>www.youtube.com/watch?v=SCE-QeDfXtA</small>
-          </a>
-        </section>
-        <section>
           <h3>Andrej Karpathy</h3>
           <p>@karpathy</p>
           <a href="http://cs.stanford.edu/people/karpathy/convnetjs/">
@@ -352,7 +346,7 @@
       // Full list of configuration options available at:
       // https://github.com/hakimel/reveal.js#configuration
       Reveal.initialize({
-        controls: false,
+        controls: true,
         progress: false,
         history: true,
         center: true,
