CC attribution for music soundtrack, adding some anchors to thanks pages.

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
           Deep Dream
         </section>
         <section>
-          <video src="media/journey.mp4" width="1024" height="720" controls="true">
+          <video src="media/journey.mp4" width="1280" height="720" controls="true">
           </video>
         </section>
       </section>
@@ -274,22 +274,33 @@
           Thanks!
         </section>
         <section>
+          <div xmlns:cc="http://creativecommons.org/ns#" about="urn:sha1:J3CFKI37B676KW7OYLKXKZSKY7FB2M5O">
+            <h3>
+              <a rel="cc:attributionURL" property="cc:attributionName" target="_blank" href="http://ccmixter.org/files/scottaltham/24942"> Scott Altham</a>
+            </h3>
+            <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by-nc/3.0/">CC BY-NC 3.0</a>
+            <p>
+              <small>(Music soundtrack for Deep Dream video)</small>
+            </p>
+          </div>
+        </section>
+        <section>
           <h3>Andrej Karpathy</h3>
-          <p>@karpathy</p>
-          <a href="http://cs.stanford.edu/people/karpathy/convnetjs/">
+          <a href="http://twitter.com/karpathy" target="_blank">@karpathy</a>
+          <p><a href="http://cs.stanford.edu/people/karpathy/convnetjs/" target="_blank">
             <small>cs.stanford.edu/people/karpathy/convnetjs</small>
-          </a>
+          </a></p>
         </section>
         <section>
           <h3>Laura Summers</h3>
-          <p>@summerscope</p>
+          <a href="http://twitter.com/summerscope" target="_blank">@summerscope</a>
         </section>
         <section>
           <h3>Andy Kitchen</h3>
-          <p>@auastro</p>
-          <a href="http://andy.kitchen/oscon/">
+          <a href="http://twitter.com/auastro" target="_blank">@auastro</a>
+          <p><a href="http://andy.kitchen/oscon/">
             <small>andy.kitchen/oscon</small>
-          </a>
+          </a></p>
         </section>
       </section>
 
