--- a/index.html
+++ b/index.html
@@ -88,15 +88,7 @@
       </section>
 
       <section>
-        <h1>1. The Pledge</h1>
-      </section>
-
-      <section data-background="images/oscon-the-pledge.jpg" class="dark-bg">
-        <section>
-          The magician shows you something ordinary: a deck of cards, a bird or a man. [...] Perhaps he asks you to inspect it to see
-          if it is indeed real, unaltered, normal. But of course... it probably isn't.
-          <p><small>- <a href="http://www.imdb.com/title/tt0482571/quotes" target="_blank">The Prestige</a></small></p>
-        </section>
+        <h1>Section heading</h1>
       </section>
 
       <section>
@@ -179,15 +171,7 @@
       </section>
 
       <section>
-        <h1>2. The Turn</h1>
-      </section>
-
-      <section data-background="images/oscon-the-turn.jpg" class="dark-bg">
-        <section>
-          The magician takes the ordinary something and makes it do something extraordinary.
-          <!--Now you're looking for the secret... but you won't find it, because of course you're not really looking. You don't really want to know.-->
-          <p><small>- <a href="http://www.imdb.com/title/tt0482571/quotes" target="_blank">The Prestige</a></small></p>
-        </section>
+        <h1>Section heading</h1>
       </section>
 
       <section>
@@ -227,15 +211,7 @@
       </section>
 
       <section>
-        <h1>3. The Prestige</h1>
-      </section>
-
-      <section data-background="images/oscon-magician-audience.jpg" class="dark-bg">
-        <section>
-          Because making something disappear isn't enough; you have to bring it back. That's why every magic trick has a third act,
-          the hardest part, the part we call "The Prestige".
-          <p><small>- <a href="http://www.imdb.com/title/tt0482571/quotes" target="_blank">The Prestige</a></small></p>
-        </section>
+        <h1>Section heading</h1>
       </section>
 
       <section>
@@ -302,8 +278,8 @@
         <section>
           <h3>Andy Kitchen</h3>
           <a href="http://twitter.com/auastro" target="_blank">@auastro</a>
-          <p><a href="http://andy.kitchen/oscon/">
-              <small>andy.kitchen/oscon</small>
+          <p><a href="http://andy.kitchen">
+              <small>andy.kitchen</small>
             </a></p>
         </section>
       </section>
